--- a/letsencrypt/config
+++ b/letsencrypt/config
@@ -11,10 +11,10 @@
 ########################################################
 
 # Path to certificate authority (default: https://acme-v01.api.letsencrypt.org/directory)
-CA="https://acme-v01.api.letsencrypt.org/directory"
+CA="https://acme-v02.api.letsencrypt.org/directory"
 
 # Path to certificate authority STAGING ENVIRONMENT
-#CA="https://acme-staging.api.letsencrypt.org/directory"
+#CA="https://acme-staging-v02.api.letsencrypt.org/directory"
 
 # Path to license agreement (default: https://letsencrypt.org/documents/LE-SA-v1.0.1-July-27-2015.pdf)
 #LICENSE="https://letsencrypt.org/documents/LE-SA-v1.0.1-July-27-2015.pdf"
@@ -77,7 +77,7 @@ HOOK="${BASEDIR}/hook.sh"
 #KEY_ALGO=rsa
 
 # E-mail to use during the registration (default: <unset>)
-#CONTACT_EMAIL=example@example.com
+#CONTACT_EMAIL=your@email.com
 
 # Lockfile location, to prevent concurrent access (default: $BASEDIR/lock)
 #LOCKFILE="${BASEDIR}/lock"
